# automaticnote

./: .gitignore  README.md  pyproject.toml  requirements.txt  scripts_setup.sh
docs/: branch-strategy.md  execution-results.md
scripts/: normalize_git_remotes.sh
src/: auto_note_pipeline.py
src/automaticnote/: __init__.py  cli.py  config.py
src/dotenv/: __init__.py
tests/: conftest.py  test_article_generator.py  test_config.py  test_title_ranker.py
