[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automaticnote"
version = "0.1.0"
description = "Automation toolkit for note posting workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
automaticnote = "automaticnote.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
